--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -378,7 +378,7 @@ It cannot be validated that if an element has a specific value, then certain chi
 \tb{Achim, which kind of things cannot be validated using XSDs / we also need references}
 
 \textbf{RDF Data Cube Vocabulary.}
-A well-formed RDF Data Cube is an a RDF graph describing one or more instances of {\em qb:DataSet} for which each of the defined integrity constraints passes.
+A well-formed RDF Data Cube is an a RDF graph describing one or more instances of {\em qb:DataSet} for which each of the 22 defined integrity constraints\footnote{http://www.w3.org/TR/vocab-data-cube/\#wf} passes.
 Each integrity constraint is expressed as narrative prose and, where possible, a SPARQL ASK query or query template. 
 If the ASK query is applied to an RDF graph then it will return true if that graph contains one or more Data Cube instances which violate the corresponding constraint \cite{CyganiakReynolds2014}.
 
