--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -179,16 +179,17 @@ University of Mannheim, Germany \\
 
 \begin{abstract}
 
+More and more domains adopt Linked Data principles
+and seek now for ways to ensure data quality by validating RDF data, as they are used to have this functionality in the XML world.
 For XML, XML Schema is the standard constraint language to validate XML documents.
 For RDF, however, there are multiple candidates for languages to express constraints on RDF data - but there is no standard language for RDF validation.
-W3C and DCMI working groups on RDF validation identified requirements to formulate and to validate RDF constraints.
-The majority of these constraints can be represented in description logics providing a logical underpinning of these constraints.
-We developed an ontology describing any RDF constraint generically (whether expressible in description logics or not).
-In parallel, we defined a basic terminology and a classification system for RDF constraints.
+We identified requirements to formulate and validate RDF constraints and mapped each requirement to a constraint type.
+The majority of these constraint types can be represented in description logics providing a logical underpinning.
 
-A constraint (expressed by constraint language \ms{$sc_{\alpha}$}) can be transformed to a constraint (expressed by constraint language \ms{$sc_{\beta}$}) by using the RDF constraint ontology as intermediate language. 
-Currently, we cannot validate every constraint language or constraint of a constraint language.
-If we define a validation for a constraint generically and if we map semantically equivalent constraints (expressed by different constraint languages) to that generically expressed constraint, we are able to provide the validation of these constraints out of the box.
+In this paper, we provide a basic terminology and classification system for RDF constraint types,
+we developed a vocabulary describing any RDF constraint type generically (whether expressible in DL or not),
+we show how to transform \emph{specific constraints} (expressed by any constraint language \ms{$\alpha$}) into \emph{generic constraints} and \emph{specific constraints} (expressed by any other constraint language \ms{$\beta$}), and
+we explain how to provide the validation of any \emph{specific constraint} immediately and why this is important. 
 
 \keywords{RDF Validation, RDF Constraints, RDF Validation Requirements, Transformation, Linked Data, Semantic Web}
 \end{abstract}
@@ -198,77 +199,152 @@ If we define a validation for a constraint generically and if we map semanticall
 
 \section{Introduction}
 
-The purpose of ontologies is to perform reasoning on RDF data and not to validate RDF data conforming to these ontologies.
-For RDF, we cannot use ontologies like we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
-The W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
-where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and validation.
-In 2014, two working groups on RDF validation have been established: 
-the W3C RDF Data Shapes WG\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles WG\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
+The purpose of OWL 2 ontologies is to perform reasoning on RDF data and not to validate RDF data conforming to these ontologies.
+OWL 2 is based on the {\em non-unique name assumption} (nUNA) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (UNA)). 
+Reasoning in OWL 2 is based on the semantics of {\em open-world assumption} (OWA), i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. 
+On the other hand, many RDF validation scenarios require the {\em closed-world assumption} (CWA) (i.e., a statement is inferred to be false if it cannot be proved to be true).
+This ambiguity in semantics is one of the main reasons why OWL 2 has not been adopted as a standard constraint language for RDF validation.  
+For this reason, we cannot use OWL 2 ontologies for RDF validation as we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
 
+In 2013, the W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
+where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and validation.
+In 2014, two working groups on RDF validation have been established to develop a language to express RDF constraints on RDF data: 
+the W3C RDF Data Shapes WG\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles WG\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
 Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working groups and initiated a database of requirements to formulate and validate RDF constraints
 which is available for contribution at \url{http://purl.org/net/rdf-validation}.
 The intention associated with this database is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
-The requirements are classified to better evaluate existing solutions. 
-We mapped each requirement to formulate RDF constraints directly to an RDF constraint.
+The requirements are classified to better evaluate existing solutions and each requirement to formulate RDF constraints is directly mapped to an RDF constraint type.
+Bosch et al. identified in total 74 requirements to formulate RDF constraints; each of them corresponding to a constraint type. 
+They recently published a technical report\footnote{Available at: \url{http://arxiv.org/abs/1501.03933}} in which they explain each requirement in detail and give examples for each (represented by different constraint languages) \cite{BoschNolleAcarEckert2015}.
+
+\tb{I copied this paragraph from the ESWC paper, we have to modify it a bit}
+Recently, RDF validation as a research field gained speed due to common needs of data practitioners. A typical example is the library domain that co-developed and adopted Linked Data principles very early. For libraries, the common description of resources are key business and they have a long tradition in developing and using interoperable data formats. While they embrace the openness of Linked Data and the data modeling principles provided by RDF, the data is still mostly represented in XML and this is unlikely to change soon. 
+Among the reasons for the success of XML is the possibility to formulate fine-grained constraints to be met by the data and to validate the data according to these constraints using powerful systems like DTDs, XML Schemas, RELAX NG, or Schematron.
+A typical example is the definition of a library record describing a book. There are clear rules which information has to be available to describe a book properly (required fields, like a title), but also how information like an ISBN number is properly represented. Libraries seek to make their own data reusable for general purposes, but also to enrich and interlink their own data. Checking if third-party data meets own requirements or validating existing data according to new needs for a Linked Data application are among common use cases for RDF validation.
 
 There is no constraint language which can be seen as the standard.
-Although, there are multiple constraint languages (having different syntaxes and semantics) which can be used to express RDF constraints, such as existential and universal quantification, cardinality restrictions, and exclusive or of properties.
+Although, there are multiple constraint languages (having different syntaxes and semantics) which can be used to express RDF constraints (such as existential and universal quantification, cardinality restrictions, and exclusive or of properties).
 The five most promising ones on being the standard are
 Description Set Profiles (DSP)\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}},
 Resource Shapes (ReSh)\footnote{\url{http://www.w3.org/Submission/shapes/}}, 
 Shape Expressions (ShEx)\footnote{\url{http://www.w3.org/Submission/shex-primer/}},
 the SPARQL Inferencing Notation (SPIN)\footnote{\url{http://spinrdf.org/}}, 
 and the Web Ontology Language (OWL 2)\footnote{\url{http://www.w3.org/TR/owl2-syntax/}}.
-
 %\section{Ideas}
-
 %constraint design patterns:
 % - ontology design pattern.org
 % - DSP uses other design pattern
 % - constraint elements are the same / 
 % - constraint / constraint elements / constraint design patterns / constraint language
-
 %dependency between requirements / when this requirements is fulfilled then this is also fulfilled (e.g. min card and requ. car)
 %min car more powerful than req. propery
+The idea behind this paper is to express any constraint type (corresponding to a requirement to formulate RDF constraints) in a generic way using a lightweight ontology (consisting of only a few terms).
 
-\section{Motivation}
+Cardinality restrictions, e.g., can be expressed either generically (\emph{generic constraints}) by \emph{description logics (DL)} 
+%and extensions  
+or specifically (\emph{specific constraints}) by domain-specific constraint languages such as OWL 2, DSP, ShEx, ReSh, and SPIN.
+The knowledge representation formalism {\em DL}, with its  well-studied theoretical properties, provides the foundational basis to express constraints generically. 
+For that reason, we map constraint types to DL statements.
+With minimum qualified cardinality restrictions, researchers from the library domain can state
+that \emph{publications} must have at least one \emph{author} which must be a \emph{person}.
+This constraint can be represented generically in DL as follows: \ms{Publication $\sqsubseteq$ $\geq$1 author.Person}.
+The same constraint may also be represented specifically by multiple constraint languages like OWL 2 and ShEx:
 
-Cardinality restrictions can be expressed either generically by description logics (DL) and extensions (\ms{generic constraints}) 
-or specifically  by domain-specific constraint languages such as OWL 2, DSP, ShEx, ReSh, and SPIN (\ms{specific constraints}).
-With minimum qualified cardinality restrictions we can state, 
-e.g., that a starfleet captain commands at least one vessel, which can generically be represented in DL:
+\begin{ex}
+# OWL 2:
+Publication
+    a owl:Restriction ;
+    owl:minQualifiedCardinality 1 ;
+    owl:onProperty author ;
+    owl:onClass Person .
+		
+# ShEx:
+Publication { author @Person{1, } }
+\end{ex}
 
-\begin{DL}
-$StarfleetCaptain \sqsubseteq \geq1 commandsVessel . Vessel $
-\end{DL}
+As there is no standard way to formulate RDF constraints, 
+semantically equivalent cardinality restrictions may be represented by different constraint languages, which causes confusion and weakens the understanding how to ensure metadata quality between multiple parties. 
+Therefore, when choosing constraint language \ms{$\alpha$} to express a constraint of an arbitrary constraint type, it should be possible to transform this constraint into a constraint expressed by any other constraint language \ms{$\beta$}. 
+This is important in order to enhance the interoperability of constraint languages and to simplify the communication of RDF data producers and consumers, 
+as constraint transformations resolve the necessity to read, write, and understand all languages used to express RDF constraints.
+
+There are validation environments enabling to validate RDF constraints expressed by just a few constraint languages such as OWL 2\footnote{\url{purl.org/net/rdfval-demo}\label{footnote1}}, DSP\footref{footnote1}, and ShEx\footnote{\url{http://www.w3.org/2013/ShEx/FancyShExDemo}}.
+But, it should be possible to validate any RDF constraints expressed by any constraint language and 
+what is even more important to validate them in exactly the same manner without any differences. 
+If we implement the validation of a \emph{generic constraint} and if we transform a \emph{specific constraint} into a \emph{generic constraint}, we are able to validate the \emph{specific constraint} immediately. 
+As a consequence, we do not have to implement the validation for each \emph{specific constraint}, as we need to implement the validation only once for each \emph{generic constraint}. 
+
+%When domain experts use graphical user interfaces to define constraints in a user-friendly way (without the necessity to express constraints on their own), 
+%constraints can be mapped to either a specific or a generic constraint, as for both the validation is provided in the background.    
+%So, the user does not have to know how to express specific constraints using any constraint language.
+
+Existing constraint languages can be extended and new constraint languages can be developed, if existing constraint languages are not sufficient to represent needed constraint types.
+If (1) a new constraint type is expressed generically, (2) the \emph{generic constraint type} is mapped to \emph{specific constraint types} (expressed by constraint languages), and (3) the validation is implemented for this particular \emph{generic constraint type},
+the validation of \emph{specific constraint types} is provided out of the box.
+As a consequence, constraint language designers do not have to implement the validation of their constraint languages and each semantically equivalent \emph{specific constraint type} is validated the same way (i.e. leading to identical validation results).
+
+This paper aims to address two main \textbf{audiences}:
+(1) RDF data providers and consumers seeking how to ensure high quality (meta)data and thus for ways to enhance the interoperability and communication of RDF constraints expressed by multiple constraint languages and  
+(2) RDF practitioners thinking of how to implement the validation of existing an newly developed constraint languages.
+The \textbf{contributions} of this paper are:
+(1) We provide a basic terminology and classification system for RDF constraint types,
+(2) we developed a vocabulary describing any RDF constraint type generically (whether expressible in DL or not),
+(3) we show how to transform \emph{specific constraints} (expressed by any constraint language \ms{$\alpha$}) into \emph{generic constraints} and \emph{specific constraints} (expressed by any other constraint language \ms{$\beta$}), and
+(4) we explain how to provide the validation of any \emph{specific constraint} immediately. 
+%(if the validation is implemented once for the corresponding \emph{generic constraint type} to which the \emph{specific constraint type} is mapped)
+The remainder of the paper is as follows.
+
+%\begin{itemize}
+	%\item Any specific constraint (expressed by any constraint language) can be transformed into a generic constraint (expressed by the generic constraint language)
+	%\item Any specific constraint (expressed by any constraint language A) can be transformed into any specific constraint (expressed by any constraint language B)
+	%\item Any specific constraint (expressed by any constraint language) can be validated automatically (if an automatic validation is defined only once for corresponding generic constraint)
+	%\item We define a basic terminology and classification system for RDF constraints
+	%\item We developed an ontology describing any RDF constraint generically (whether expressible in DL or not)%which can also be expressed by any constraint language
+	%\item We present that any RDF constraint can be described by the developed ontology - whether the constraint can be expressed in DL or not 
+	%\item We show how to transform specific constraints (expressed by any constraint language \ms{$\alpha$}) into generic constraints and into specific constraints (expressed by any other constraint language \ms{$\beta$})
+  %\item We explain that any specific constraint can be validated automatically (if the validation is implemented only once for the corresponding generic constraint)
+%\end{itemize}
+
+%The \textbf{benefits} of our framework are:
+%\begin{itemize}
+	%\item Any specific constraint (expressed by any constraint language) can be transformed into a generic constraint (expressed by the generic constraint language)
+	%\item Any specific constraint (expressed by any constraint language A) can be transformed into any specific constraint (expressed by any constraint language B)
+	%\item Any specific constraint (expressed by any constraint language) can be validated automatically (if an automatic validation is defined only once for corresponding generic constraint)
+%\end{itemize}
+
+\section{include this in next section}
+
+With minimum qualified cardinality restrictions, researchers from the library domain can state
+that \emph{publications} must have at least one \emph{author} which must be a \emph{person}.
+This constraint can be represented generically in DL as follows: \ms{Publication $\sqsubseteq$ $\geq$1 author.Person}.
 
 The same constraint may also be represented specifically by multiple constraint languages like OWL 2, ShEx, ReSh, or DSP:
 
 \begin{ex}
 # OWL 2:
-StarfleetCaptain
+Publication
     a owl:Restriction ;
     owl:minQualifiedCardinality 1 ;
-    owl:onProperty commandsVessel ;
-    owl:onClass Vessel .
+    owl:onProperty author ;
+    owl:onClass Person .
 		
 # ShEx:
-StarfleetCaptain { commandsVessel @Vessel{1, } }
+Publication { author @Person{1, } }
 
 # ReSh:
-StarfleetCaptain a rs:ResourceShape ; rs:property [
-    rs:name "commandsVessel" ; rs:propertyDefinition commandsVessel ;
-    rs:valueShape Vessel ;
+Publication a rs:ResourceShape ; rs:property [
+    rs:name "author" ; rs:propertyDefinition author ;
+    rs:valueShape Person ;
     rs:occurs rs:One-or-many ; ] .
 		
 # DSP:
 [   a dsp:DescriptionTemplate ; 
-    dsp:resourceClass StarfleetCaptain ; 
+    dsp:resourceClass Publication ; 
     dsp:statementTemplate [ a dsp:NonLiteralStatementTemplate ;
         dsp:minOccur 1 ; dsp:maxOccur "infinity" ; 
-        dsp:property commandsVessel ; 
+        dsp:property author ; 
         dsp:nonLiteralConstraint [ a dsp:NonLiteralConstraint ;
-            dsp:valueClass Vessel ] ] ] .
+            dsp:valueClass Person ] ] ] .
 \end{ex}
 
 As \ms{Janeway} commands the vessel \ms{Voyager} (\ms{commandsVessel(Janeway,Voyager)}) and \ms{Voyager} is a \ms{Vessel} (\ms{rdf:type(Voyager,Vessel)}), the assignment of \ms{Janeway} to the class \ms{StarfleetCaptain} (\ms{rdf:type(Janeway,StarfleetCaptain)}) does not cause a constraint violation.
@@ -298,17 +374,8 @@ The generically expressed cardinality restriction is represented in RDF as follo
     constrainingValue 1 ] .
 \end{ex}
 
-As there is no standard way to formulate RDF constraints, 
-semantically equivalent cardinality restrictions may be represented by different constraint languages. 
-When choosing constraint language \ms{$\alpha$} to express an arbitrary constraint, it should be possible to transform this constraint into a constraint expressed by any other constraint language \ms{$\beta$}. 
-This is important as it is often the case that producers and consumers of RDF data are able to read and to write constraints in constraint language \ms{$\alpha$} very well but not in another constraint language \ms{$\beta$}. 
-This way, producers and consumers of RDF data may communicate with each other without the necessity to understand all constraint languages and the interoperability of constraint languages is enhanced.
+-----
 
-There are validation environments enabling to validate RDF constraints expressed by just a few constraint languages such as OWL 2\footnote{\url{purl.org/net/rdfval-demo}\label{footnote1}}, DSP\footref{footnote1}, and ShEx\footnote{\url{http://www.w3.org/2013/ShEx/FancyShExDemo}}.
-But, it should be possible to validate any RDF constraints expressed by any constraint language and 
-what is even more important to validate them in exactly the same manner without any differences. 
-If we implement the validation of a generic constraint and if we transform a specific constraint into a generic constraint, we are able to validate the specific constraint immediately. 
-As a consequence, we do not have to implement the validation for each specific constraint, as we need to implement the validation only once for each generic constraint. 
 The generically expressed cardinality restriction is validated within our validation environment (see section \ref{sec:validation}) by means of a SPARQL query:
 \begin{ex}
 [   a PropertyConstraint ;
@@ -321,34 +388,6 @@ The generically expressed cardinality restriction is validated within our valida
 BIND ( qualifiedCardinality( ?subject, ?p1, ?c1 ) AS ?c ) .
 FILTER ( ?c < ?cv ) .		  
 \end{ex}
-
-When domain experts use graphical user interfaces to define constraints in a user-friendly way (without the necessity to express constraints on their own), 
-constraints can be mapped to either a specific or a generic constraint, as for both the validation is provided in the background.    
-So, the user does not have to know how to express specific constraints using any constraint language.
-If there is a new constraint not covered by any existing constraint language, one can just define the validation for the corresponding generic constraint.
-This way, one is able to extend existing constraint languages and to define new constraint languages if existing constraint languages are not sufficient to express particular constraints.
-If a language designer develops a new constraint language, 
-the language designer only needs to define a mapping to the developed ontology
-to be able to automatically validate the constraints expressible by the new constraint language out of the box.
-
-The \textbf{contributions} of this paper are:
-\begin{itemize}
-	%\item Any specific constraint (expressed by any constraint language) can be transformed into a generic constraint (expressed by the generic constraint language)
-	%\item Any specific constraint (expressed by any constraint language A) can be transformed into any specific constraint (expressed by any constraint language B)
-	%\item Any specific constraint (expressed by any constraint language) can be validated automatically (if an automatic validation is defined only once for corresponding generic constraint)
-	\item We define a basic terminology and classification system for RDF constraints
-	\item We developed an ontology describing any RDF constraint generically (whether expressible in DL or not)%which can also be expressed by any constraint language
-	%\item We present that any RDF constraint can be described by the developed ontology - whether the constraint can be expressed in DL or not 
-	\item We show how to transform specific constraints (expressed by any constraint language \ms{$\alpha$}) into generic constraints and into specific constraints (expressed by any other constraint language \ms{$\beta$})
-  \item We explain that any specific constraint can be validated automatically (if the validation is implemented only once for the corresponding generic constraint)
-\end{itemize}
-
-%The \textbf{benefits} of our framework are:
-%\begin{itemize}
-	%\item Any specific constraint (expressed by any constraint language) can be transformed into a generic constraint (expressed by the generic constraint language)
-	%\item Any specific constraint (expressed by any constraint language A) can be transformed into any specific constraint (expressed by any constraint language B)
-	%\item Any specific constraint (expressed by any constraint language) can be validated automatically (if an automatic validation is defined only once for corresponding generic constraint)
-%\end{itemize}
 
 \section{Ontology to Describe RDF Constraints Generically} 
 \label{sec:ontology}
