--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -393,50 +393,49 @@ FILTER ( ?c < ?cv ) .
 \section{A Vocabulary to Describe RDF Constraints Generically} 
 \label{sec:ontology}
 
-In order to define a vocabulary to describe RDF constraints generically, it is needed to define the terminology for the formulation of RDF constraints and to classify them. 
-A \ms{constraint language} is a language which is used to formulate constraints.
-The W3C Data Shapes working group defines \ms{constraint} as a component of a schema what needs to be satisfied\footnote{\url{https://www.w3.org/2014/data-shapes/wiki/Glossary}}.
-We identified four dimensions to classify constraints:
+In order to develop a vocabulary to describe any RDF constraint generically, it is needed to define the terminology for the formulation of RDF constraints and to classify them. 
+A \emph{constraint language} is a language which is used to formulate constraints.
+The W3C Data Shapes working group defines \emph{RDF constraint} as a component of a schema what needs to be satisfied\footnote{\url{https://www.w3.org/2014/data-shapes/wiki/Glossary}}.
+We identified four dimensions to classify RDF constraints:
 \begin{itemize}
-  \item \ms{Universality:} specific constraints vs. generic constraints
-	\item \ms{Complexity:} simple constraints vs. complex constraints
-	\item \ms{Context:} property constraints vs. class constraints
-	\item \ms{DL Expressivity:} constraints expressible in DL vs. constraints not expressible in DL
+  \item \emph{Universality:} specific constraints vs. generic constraints
+	\item \emph{Complexity:} simple constraints vs. complex constraints
+	\item \emph{Context:} property constraints vs. class constraints
+	\item \emph{DL Expressivity:} constraints expressible in DL vs. constraints not expressible in DL
 \end{itemize}
 
 As there are already five promising constraint languages, our purpose is not to invent a new constraint language.
-We rather developed a very simple ontology (only three classes, three object properties, and three data properties) which is universal enough to describe any RDF constraint expressible by any RDF constraint language (see the conceptual model in figure \ref{fig:RDF-CO-conceptual-model}).
-We call this vocabulary the \ms{RDF constraints ontology (RDF-CO)}\footnote{Available at: \url{https://github.com/boschthomas/RDF-constraints-ontology}}.
+We rather developed a very simple vocabulary (only three classes, three object properties, and three data properties) which is universal enough to describe any RDF constraint\footnote{Bosch et al. identified in total 74 requirements to formulate RDF constraints; each of them corresponds to a constraint type \cite{BoschNolleAcarEckert2015}} expressible by any constraint language (see the conceptual model in figure \ref{fig:RDF-CV-conceptual-model}).
+We call this vocabulary the \emph{RDF Constraints Vocabulary (RDF-CV)}\footnote{Available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}}.
 
 \begin{figure}
 	\centering
-		\includegraphics[width=0.80\textwidth]{images/RDF-CO-conceptual-model.png}
-	\caption{RDF constraints ontology (RDF-CO) - conceptual model}
-	\label{fig:RDF-CO-conceptual-model}
+		\includegraphics[width=0.80\textwidth]{images/RDF-CV-conceptual-model.png}
+	\caption{RDF Constraints Vocabulary (RDF-CV) - conceptual model}
+	\label{fig:RDF-CV-conceptual-model}
 \end{figure}
 
-\ms{Specific constraints} are expressed by specific constraint languages like DSP, OWL 2, ReSh, ShEx, and SPIN.
-\ms{Generic constraints} are expressed by the RDF-CO.
-As RDF-CO describes constraints generically, RDF-CO does not distinguish constraints according to the dimension \ms{universality}. 
-The majority of constraints can be expressed in DL (see section \ref{sec:evaluation}).
-In contrast, there are constraints which cannot be expressed in DL, but are also representable by the RDF-CO. 
-\ms{Complex constraints} encompass \ms{simple constraints} (atomic constraints) and/or further complex constraints.
-DL statements representing complex constraints are created out of DL statements representing composed constraints (if expressible in DL). 
-Simple constraints may be applied to either properties (\ms{properties constraints}) or classes (\ms{class constraints}).
-There are no terms representing simple and complex constraints in the RDF-CO, since context classes (associated simple constraints hold for individuals of these classes) of simple constraints may just be reused by further constraints.
-As a consequence, the distinction of property and class constraints is sufficient to describe all possible RDF constraints.
+The \emph{RDF-CV} represents \emph{generic constraints} and \emph{specific constraints} are expressed by specific constraint languages.
+As the RDF-CV describes constraints generically, the \emph{RDF-CV} does not distinguish constraints according to the dimension \emph{universality}. 
+The majority of constraints can be expressed in DL.
+In contrast, there are constraints which cannot be expressed in DL, but are also representable by the \emph{RDF-CV} (see section \ref{sec:evaluation}). 
+\emph{Complex constraints} encompass \emph{simple constraints} (atomic constraints) and/or further \emph{complex constraints},
+i.e. DL statements representing \emph{complex constraints} are created out of DL statements standing for composed constraints (if expressible in DL). 
+Simple constraints may be applied to either properties (\emph{property constraints}) or classes (\emph{class constraints}).
+There are no terms standing for \emph{simple} and \emph{complex constraints} in the \emph{RDF-CV}, since \emph{context classes} of \emph{simple constraints} may just be reused within further \emph{complex constraints} (\emph{simple constraints} associated with \emph{context classes} must hold for individuals of these \emph{context classes}).
+As a consequence, the distinction of \emph{property} and \emph{class constraints} is sufficient to describe all possible RDF constraint types.
 
 \subsection{Simple Constraints (Expressible in DL)}
 
-Sub-classes of \ms{simple constraints} are \ms{property constraints} and \ms{class constraints} (see the RDF-CO implementation model in figure \ref{fig:RDF-CO-implementation-model}). 
+Sub-classes of \ms{simple constraints} are \ms{property constraints} and \ms{class constraints} (see the RDF-CO implementation model in figure \ref{fig:RDF-CV-implementation-model}). 
 For both property and class constraints a context class, a list of classes, the constraining element, and the constraining value can be stated. 
 Lists of left and right properties can only be stated for property constraints.
 
 \begin{figure}
 	\centering
-		\includegraphics[width=0.70\textwidth]{images/RDF-CO-implementation-model.png}
-	\caption{RDF constraints ontology (RDF-CO) - implementation model}
-	\label{fig:RDF-CO-implementation-model}
+		\includegraphics[width=0.70\textwidth]{images/RDF-CV-implementation-model.png}
+	\caption{RDF Constraints Vocabulary (RDF-CV) - implementation model}
+	\label{fig:RDF-CV-implementation-model}
 \end{figure}
 
 A constraint holds for all individuals of a context class (\ms{contextClass}).
@@ -589,7 +588,7 @@ property & C & humanMother & - & Human & = & 1 \\
 property & D & klingonFather & - & Klingon & = & 1 \\
 \end{gcotable}
 
-\subsection{Simple Constraints (Syntactic Sugar)}
+\subsection{Complex Constraints as Simple Constraints (Syntactic Sugar)}
 
 Almost 15 percent of all RDF constraints are complex constraints which can be simplified and therefore formulated as simple constraints when using them in terms of syntactic sugar (see section \ref{sec:evaluation}).
 
